force-app/main/default/objects/bpats__ATS_Stage__c/bpats__ATS_Stage__c.object-meta.xml
<CustomObject>
    <description>An ATS Stage is an individual stage on a Job</description>
    <label>ATS Stage</label>
    <nameField>
        <label>ATS Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ATS Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>