force-app/main/default/objects/bpats__ATS_Stage__c/fields/bpats__ATS_Template_Stage__c.field-meta.xml
<CustomField>
    <fullName>bpats__ATS_Template_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ATS Template Stage</label>
    <referenceTo>bpats__ATS_Template_Stage__c</referenceTo>
    <relationshipLabel>ATS Stages</relationshipLabel>
    <relationshipName>ATS_Stages</relationshipName>
    <type>Lookup</type>
</CustomField>