force-app/main/default/objects/bpats__ATS_Stage__c/fields/bpats__Is_Synced__c.field-meta.xml
<CustomField>
    <fullName>bpats__Is_Synced__c</fullName>
    <formula>IF(AND(
  Name = bpats__ATS_Template_Stage__r.Name, 
  TEXT(bpats__Stage_Type__c) = TEXT(bpats__ATS_Template_Stage__r.bpats__Stage_Type__c),
  bpats__Sequence__c = bpats__ATS_Template_Stage__r.bpats__Sequence__c,
  bpats__Block_Multiple_Candidates__c = bpats__ATS_Template_Stage__r.bpats__Block_Multiple_Candidates__c,
  bpats__Interview_Stage__c = bpats__ATS_Template_Stage__r.bpats__Interview_Stage__c 
 ), 
 true, 
 false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Synced</label>
    <type>Checkbox</type>
</CustomField>