force-app/main/default/objects/bpats__ATS_Stage__c/fields/bpats__Job_Type__c.field-meta.xml
<CustomField>
    <fullName>bpats__Job_Type__c</fullName>
    <formula>TEXT(bpats__Job__r.bpats__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Type</label>
    <type>Text</type>
</CustomField>