force-app/main/default/objects/bpats__ATS_Stage__c/fields/bpats__Sequence_Name__c.field-meta.xml
<CustomField>
    <fullName>bpats__Sequence_Name__c</fullName>
    <formula>text( bpats__Sequence__c ) + &quot; - &quot; +  Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sequence - Name</label>
    <type>Text</type>
</CustomField>