force-app/main/default/objects/bpats__ATS_Stage__c/listViews/bpats__All.listView-meta.xml
<ListView>
    <fullName>bpats__All</fullName>
    <columns>NAME</columns>
    <columns>bpats__ATS_Template_Stage__c</columns>
    <columns>bpats__Job__c</columns>
    <columns>bpats__Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>